libstream-more-perl (0.12.0) unstable; urgency=low

  * take read lock in DiskBuffer by default
    (Queue and RoundRobin disable this option for the sake of performance)

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 26 Jun 2012 15:32:02 +0400

libstream-more-perl (0.11.8) unstable; urgency=low

  * RoundRobin improvements:
   - fix duplicate reads
   - fix initialization races

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 21 Jun 2012 21:16:30 +0400

libstream-more-perl (0.11.7) unstable; urgency=low

  * fixed unlink/lockf race in Buffer::SQLite + stress test

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Wed, 20 Jun 2012 15:04:29 +0400

libstream-more-perl (0.11.6) unstable; urgency=low

  * fix coro_filter empty commit hanging

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Fri, 15 Jun 2012 17:39:11 +0400

libstream-more-perl (0.11.5) unstable; urgency=low

  * Stram::Filter::Coro->write made blocking

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Fri, 15 Jun 2012 16:49:42 +0400

libstream-more-perl (0.11.4) unstable; urgency=low

  * add coro_out function that writes into output stream in coros

 -- nikita <nikita@yandex-team.ru>  Wed, 14 Jun 2012 17:01:21 +0400

libstream-more-perl (0.11.3) unstable; urgency=low

  * Stream::In::Buffer (MQ) 

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Wed, 13 Jun 2012 19:42:27 +0400

libstream-more-perl (0.11.2) unstable; urgency=low

  * Skip -> read commit on skip

 -- Serge Toropov <sombr@yandex-team.ru>  Wed, 13 Jun 2012 19:02:48 +0400

libstream-more-perl (0.11.1) unstable; urgency=low

  * fix - commit in Skip

 -- Serge Toropov <sombr@yandex-team.ru>  Wed, 06 Jun 2012 16:56:25 +0400

libstream-more-perl (0.11.0) unstable; urgency=low

  * refactor Stream::Filter::Coro - persistent coro threads

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 30 May 2012 22:01:21 +0400

libstream-more-perl (0.10.1) unstable; urgency=low

  * check lag on create
