@@ -2,6 +2,9 @@ libstream-more-perl (0.12.0) unstable; urgency=low
 
   * take read lock in DiskBuffer by default
     (Queue and RoundRobin disable this option for the sake of performance)
+  * fix lag() race condition in DiskBuffer
+  * optimize RoundRobin ->in() method (this change speeds up everything,
+    especially ->commit())
 
  -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 26 Jun 2012 15:32:02 +0400
 
